# json_sorted

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst
src/normdata/: __init__.py  __main__.py
src/normdata/core/: main.py  run.py
src/normdata/json/: main.py  run.py
src/normdata/parsing/: SuperParser.py  getopt_long.py
tests/: test_json_0.py  test_json_0_core.py  test_json_1.py  test_json_1_core.py  test_json_2.py  test_json_2_core.py  test_json_3.py
