[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "setdoc>=1.3.14,<3",
]
description = "This project normalizes data in files."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "normdata"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.0.0.dev2"

[project.urls]
Download = "https://pypi.org/project/normdata/#files"
Index = "https://pypi.org/project/normdata/"
Source = "https://github.com/johannes-programming/normdata/"
Website = "https://normdata.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = true
